# oboy

./: CMakeLists.txt  ProjectHome.md  README.md
demo1/: CMakeLists.txt  Demo1.cpp  Demo1.h  main.cpp
demo2/: Body.cpp  Body.h  CMakeLists.txt  Demo2.cpp  Demo2.h  Explosion.cpp  Explosion.h  main.cpp
demo2/res/: VectorBattle60.font  VectorBattle60.imageset  resources.xml
libs/: CMakeLists.txt
libs/OBoy/: AES.cpp  AES.h  CEGUIFont.cpp  CEGUIFont.h  CEGuiEvent.cpp  CEGuiEvent.h  CEGuiEventArgs.cpp  CEGuiEventArgs.h  CEGuiWindow.cpp  CEGuiWindow.h  CMakeLists.txt  CoherentNoise.cpp  CoherentNoise.h  Controller.cpp  Controller.h  Crypto.cpp  Crypto.h  Cube.h  Environment.cpp  Environment.h  Font.cpp  Font.h  Game.h  GamePad.cpp  GamePad.h  GamePadListener.h  Graphics.h  Gui.cpp  Gui.h  GuiEvent.h  GuiEventArgs.h  GuiFunctorCopySlot.h  GuiFunctorPointerSlot.h  GuiFunctorReferenceBinder.h  GuiFunctorReferenceSlot.h  GuiMemberFunctionSlot.h  GuiSlotFunctorBase.h  GuiSubscriberSlot.cpp  GuiSubscriberSlot.h  GuiWindow.h  (+107 more)
libs/OBoyLib/: Boundary.h  CMakeLists.txt  Circle.cpp  Circle.h  Clipboard.cpp  Clipboard.h  Cloneable.h  Color.h  CrtDbgNew.h  Function.h  Function2D.h  HeightBoundary.cpp  HeightBoundary.h  IntersectionBoundary.cpp  IntersectionBoundary.h  Matrix.cpp  Matrix.h  MemDbg.cpp  MemDbg.h  MessageListener.h  MessageSource.h  Messenger.cpp  Messenger.h  OBoyMath.h  OBoyUtil.h  PerfTimer.cpp  PerfTimer.h  Positionable.cpp  Positionable.h  Rect.cpp  Rect.h  ReusableTickable.h  ReusableTickableQueue.cpp  ReusableTickableQueue.h  ReusableTickableSet.cpp  ReusableTickableSet.h  SinFunction2D.cpp  SinFunction2D.h  SmoothTransitionFunction.cpp  SmoothTransitionFunction.h  (+11 more)
libs/dxsdk/200806/Samples/C++/DXUT/Core/: CMakeLists.txt
libs/tinyxml/: CMakeLists.txt
